# Terminal-find

./: .gitignore  README.md  pyproject.toml
.bom-test/: current-session.txt
.ps-e2e-test/: current-session.txt
.ps-profile-test/: current-session.txt
.ps-stale-test/: current-session.txt
integrations/bash/: tfind.bash
integrations/powershell/: tfind-profile.ps1
scripts/: install.ps1  install.sh
src/terminal_find.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/tfind/: __main__.py  cli.py  console_capture.py  searching.py  session.py  ui.py
tests/: test_cli.py  test_searching.py  test_session.py  test_ui.py
tfind-logs/: current-session.txt
