[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-find"
version = "0.1.0"
description = "Search the active terminal transcript with a Ctrl+F-style TUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tfind = "tfind.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
